--- a/css/main.css
+++ b/css/main.css
@@ -16,6 +16,14 @@ body {
 	color: white;
 }
 
+.home-footer {
+	position: absolute;
+	top:95%;
+	left:50%;
+	transform: translateX(-50%) translateY(-90%);
+	color: white;
+}
+
 .white-text{
 	color: white;
 }
