--- a/css/main.css
+++ b/css/main.css
@@ -18,8 +18,8 @@ body {
 
 .home-footer {
 	position: absolute;
-	top:95%;
-	left:50%;
+	top:95vh;
+	left:50vh;
 	transform: translateX(-50%) translateY(-90%);
 	color: white;
 }
