--- a/css/main.css
+++ b/css/main.css
@@ -7,10 +7,23 @@ body {
     width:100%;
 }
 
+.form1 {
+	background: rgba(37, 37, 37, 0.0);
+	position: absolute;
+	padding: 10px 10px 10px 10px;
+	margin-left:10vw;
+	margin-right:10vw;
+	margin-top:10vh;
+	margin-bottom:10vh;
+	width: 80vw;
+	height: 80vh;
+	font-family: 'Segoe UI';
+}
+
 .home-content {
 	text-align: center;
 	position: absolute;
-	top: 50%;
+	top:50%;
 	left:50%;
 	transform: translateX(-50%) translateY(-50%);
 	color: white;
