--- a/css/main.css
+++ b/css/main.css
@@ -11,13 +11,12 @@ body {
 	background: rgba(37, 37, 37, 0.5);
 	position: absolute;
 	padding: 10px 10px 10px 10px;
-	margin-left:10vw;
-	margin-right:10vw;
-	margin-top:10vh;
-	margin-bottom:10vh;
-	width: 80vw;
-	height: 80vh;
+	left:50%;
+	top:50%;
+	width: 80%;
+	height: 80%;
 	font-family: 'Segoe UI';
+	transform: translateX(-50%) translateY(-50%);
 }
 
 .home-content {
