--- a/css/main.css
+++ b/css/main.css
@@ -11,12 +11,13 @@ body {
 	background: rgba(37, 37, 37, 0.5);
 	position: absolute;
 	padding: 10px 10px 10px 10px;
-	left:50%;
-	top:50%;
+	margin-left:10%;
+	margin-right:10%;
+	margin-top:5%;
+	margin-bottom:5%;
 	width: 80%;
 	height: 80%;
 	font-family: 'Segoe UI';
-	transform: translateX(-50%) translateY(-50%);
 }
 
 .home-content {
