--- a/menu/style.css
+++ b/menu/style.css
@@ -57,7 +57,9 @@ a {
     text-align: center;
     margin-bottom: 20px;
     background: rgb(255,255,255);
-    background: linear-gradient(222deg, rgba(255,255,255,0.5) 0%, rgba(0,0,0,0.5) 100%);  }
+    background: linear-gradient(222deg, rgba(255,255,255,0.5) 0%, rgba(0,0,0,0.5) 100%);  
+    text-shadow: 2px 2px 4px #000000;
+  }
 .p_button {
     background-color: white;
     border-radius: 15px;
